js info fix
fixing issue of info not showing

--- a/css/style.css
+++ b/css/style.css
@@ -117,5 +117,5 @@ section.float-right{
 	display: none;
 }
 .hidden {
-	display: block;
+	display: block !important;
 }
